# CSF-toolkit

./: README.md  pyproject.toml  tests.ipynb
csf_toolkit/: __init__.py  core.py  metrics.py  utils.py
csf_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
csf_toolkit/reaction/: __init__.py  base.py  prompts.py
csf_toolkit/sentiment/: __init__.py  base.py
examples/: OpenAI_example.ipynb  quickstart.py
tests/: test_metrics.py
